# news-aggregator

./: .gitignore  README.md  docker-compose.yaml
backend/: pyproject.toml
backend/src/: main.py
backend/src/api_v1/: router.py  utils.py
backend/src/api_v1/auth/: views.py
backend/src/api_v1/auth/schemas/: input.py  output.py
backend/src/api_v1/comments/: views.py
backend/src/api_v1/comments/schemas/: input.py  output.py
backend/src/api_v1/news/: views.py
backend/src/api_v1/news/schemas/: input.py  output.py
backend/src/api_v1/users/: __init__.py  validate_image.py  views.py
backend/src/api_v1/users/schemas/: output.py
backend/src/api_v1/utils/: auth.py  validate_response.py
backend/src/core/: http_session.py
backend/src/rabbit/: comments.py  exceptions.py  news.py  rmq_connection.py
backend/src/s3/: client.py
db-service/: .env.celery  .env.example  Dockerfile  README.md  pyproject.toml
db-service/db_service/api/v1/news/: models.py
db-service/db_service/db_service/: asgi.py  settings.py
db-service/src/: manage.py
db-service/src/api/v1/auth/: models.py  views.py
db-service/src/api/v1/news/: documents.py  models.py
db-service/src/core/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
db-service/src/news/: admin.py  apps.py  documents.py  filters.py  models.py  pagination.py  serializers.py  signals.py  urls.py  views.py
db-service/src/news/celery_tasks/: create_news_utils.py  tasks.py  utils.py
db-service/src/news/comments/: apps.py  models.py  serializers.py  urls.py  views.py
db-service/src/news/comments/migrations/: 0001_initial.py
db-service/src/news/migrations/: 0001_initial.py  0002_fill_sources_categories.py  0003_remove_news_categories_delete_newscategory.py  0004_alter_news_source.py  0005_alter_news_options_alter_news_active_alter_news_body_and_more.py  0006_alter_news_published_at.py  0007_fill_self_source.py  0008_alter_news_link.py
db-service/src/news/models/: __init__.py  category.py  news.py  news_image.py  source.py  source_category_associative.py
db-service/src/news/news_signals/: custom_signals.py  signals.py
db-service/src/news/serializers/: __init__.py  categories.py  create_news.py  news.py  news_categories_mixin.py  news_document.py  news_image.py  query.py  source.py
db-service/src/news/utils/: cache.py  news_categories.py
db-service/src/news/views/: __init__.py  by_pk.py  lists.py  parser.py  search.py
db-service/src/rabbit/: actions.py  base.py  messages.py
db-service/src/users/: models.py  serializers.py  urls.py  views.py
db-service/src/users/auth_users/: apps.py  serializers.py  urls.py  views.py
db-service/src/users/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: AuthService.js  NewsCommentsService.js  NewsService.js  UserService.js  WebSocketsService.js
frontend/src/components/: AppRouter.jsx
frontend/src/components/UI/Loader/: Loader.jsx  Loader.module.css
frontend/src/components/UI/input/: Password.jsx
frontend/src/components/layout/Footer/: Footer.jsx
frontend/src/components/layout/Header/: Header.jsx
frontend/src/components/layout/LeftSidebar/: CategoriesItem.jsx  LeftSideBar.jsx
frontend/src/components/posts/AiSection/: AiReport.jsx
frontend/src/components/posts/FreshNewsBlock/: FreshNewsCountSectioin.jsx
frontend/src/components/posts/PostList/: NewsPostCategories.jsx  NewsPostItem.jsx  NewsPostsList.jsx  Posts.jsx
frontend/src/hooks/: useObserver.js
frontend/src/pages/: CategoryPage.jsx  ErrorPage.jsx  LoginPage.jsx  MainPage.jsx  NewsItemPage.jsx  NewsPage.jsx  RegistrationPage.jsx  SearchPage.jsx
frontend/src/router/: index.js
frontend/src/styles/: App.css  LeftSideBar.css  Login.css  PostsSection.css  SearchNewsSection.css  footer.css  header.css
minio/scripts/: create_bucket.sh
news-parser/: README.md  pyproject.toml
news-parser/src/: constants.py  main.py  news_parser.py  schemas.py
news-parser/src/parsers/: __init__.py  base_handlers.py  base_parser.py  interfaces.py
news-parser/src/parsers/auto_sport/: handlers.py  parser.py
news-parser/src/parsers/cyber_sport/: handlers.py  parser.py
news-parser/src/parsers/economics/: parser.py
news-parser/src/parsers/politics/: parser.py
news-parser/src/parsers/rbc/: handlers.py  parser.py
news-parser/src/parsers/sport/: handlers.py  parser.py
news-parser/src/parsers/sport_rbc/: handlers.py  parser.py
news-parser/src/parsers/tech_science/: handlers.py  parser.py
