[project]
name = "db-service"
version = "0.1.0"
description = "Это микросервис, который имплементирует бизнес-логику взаимодействия с СУБД агрегатора новостей."
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django>=5.2.5",
    "django-elasticsearch-dsl>=9.0",
    "django-elasticsearch-dsl-drf>=0.22.5",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.1",
    "dotenv>=0.9.9",
    "elasticsearch>=9.1.0",
    "elasticsearch-dsl>=0.0.9",
    "psycopg[binary]>=3.2.9",
    "redis>=6.4.0",
    "ruff>=0.12.8",
]


[tool.ruff]
fix = true

exclude = [
    ".git",
    ".venv",
    "migrations",
    "__pycache__",
]

# Выбор наборов правил
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort - сортировка импортов
    "UP",   # pyupgrage
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "RUF",  # Ruff-specific rules
]

# Игнорируем некоторые ошибки
ignore = [
    "E501",   # Длина строки превышает лимит
    "E401",   # Импорт не используется
    "B008",   # do not perform funcion call in argument defaults
]

target-version = "py313"
line-length = 88

[tool.ruff.isort]
known-first-party = ["db-service"]

[tool.ruff.per-file-ignores]

[tool.ruff.format]
quote-style = "double"  # какие кавычки использовать
indent-style = "space"  # форматирование отступов
line-ending = "auto"
